feat: Add clockin/clockout + @CurrentUser
