# packages/backend/src/user-records/dto/update-user-record.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateUserRecordDto } from './create-user-record.dto';
+
+export class UpdateUserRecordDto extends PartialType(CreateUserRecordDto) {}
