# packages/backend/swagger.json
@@ -1,6 +1,102 @@
 {
   "openapi": "3.0.0",
   "paths": {
+    "/user-records": {
+      "post": {
+        "operationId": "UserRecordsController_create",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateUserRecordDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      },
+      "get": {
+        "operationId": "UserRecordsController_findAll",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/user-records/{id}": {
+      "get": {
+        "operationId": "UserRecordsController_findOne",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      },
+      "patch": {
+        "operationId": "UserRecordsController_update",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateUserRecordDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "operationId": "UserRecordsController_remove",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/auth/login": {
       "post": {
         "operationId": "AuthController_login",
@@ -59,6 +155,35 @@
   "servers": [],
   "components": {
     "schemas": {
+      "CreateUserRecordDto": {
+        "type": "object",
+        "properties": {
+          "event": {
+            "type": "string",
+            "description": "IN/OUT event to record",
+            "enum": [
+              "in",
+              "out"
+            ]
+          }
+        },
+        "required": [
+          "event"
+        ]
+      },
+      "UpdateUserRecordDto": {
+        "type": "object",
+        "properties": {
+          "event": {
+            "type": "string",
+            "description": "IN/OUT event to record",
+            "enum": [
+              "in",
+              "out"
+            ]
+          }
+        }
+      },
       "AuthLoginDto": {
         "type": "object",
         "properties": {
